--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>BRUH</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore fugiat sapiente voluptatum quam numquam hic repellat necessitatibus mollitia eaque, obcaecati veritatis deleniti magnam incidunt perspiciatis eum? Dolores enim non rem.</p>
+    <p style="color: blueviolet;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore fugiat sapiente voluptatum quam numquam hic repellat necessitatibus mollitia eaque, obcaecati veritatis deleniti magnam incidunt perspiciatis eum? Dolores enim non rem.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero eius qui, ipsam expedita impedit inventore necessitatibus rem ex dignissimos fugiat at non, odit maxime harum doloremque quae amet delectus tempora!</p>
 
 </body>
